Fix Lazy loading error in Jackson

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # ===============================
 spring.http.multipart.max-file-size=3MB
 spring.http.multipart.max-request-size=3MB
+
+
+# ===============================
+# JACKSON
+# ===============================
+
+# Fix Lazy loading error
+spring.jackson.serialization.fail-on-empty-beans=false
